tests/exec/pos/string_empty.hsc
fn main() {
  let s = "" + "hi";
  write(s);
}
