tests/exec/neg/error_exit4.hsc
fn main() {
  write("err4");
  exit(4);
}
